ch01/journal/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: NodePort
