ch01/journal/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: local.pnt.io
#    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
  ingressClassName: nginx
